--- a/first rmd.Rmd
+++ b/first rmd.Rmd
@@ -10,7 +10,7 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
+# form git to rstudio
 
 ```{r}
 library(utils)
